// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmSessionExtension should show a guide to install the extension if no extension is installed 1`] = `
<sessionframe-stub
  icon="laptop"
>
  <div
    class="session-container"
  >
    <h2
      class="session-title"
    >
      Use Lunie Browser Extension
    </h2>
     
    <div
      class="session-main"
    >
      <p>
        
        Looks like you don't have the Lunie browser extension installed yet.
        Head over to the
        
        <a
          href="http://bit.ly/lunie-ext"
          rel="noopener norefferer"
          target="_blank"
        >
          Chrome Web Store
        </a>
        
        to quickly install the extension.
      
      </p>
    </div>
  </div>
</sessionframe-stub>
`;

exports[`TmSessionExtension should show a list of all accounts in the extension 1`] = `
<sessionframe-stub
  icon="laptop"
>
  <div
    class="session-container"
  >
    <h2
      class="session-title"
    >
      Use Lunie Browser Extension
    </h2>
     
    <div
      class="session-main"
    >
      <p
        class="extension-message"
      >
        
        Below is a list of accounts we've received from the Lunie browser
        extension.
      
      </p>
       
      <accountlist-stub
        accounts="[object Object],[object Object]"
        buttonaction="function () { [native code] }"
        buttontext="Use Account"
      />
    </div>
  </div>
</sessionframe-stub>
`;
